fixed overflow on footer text in mobile view

--- a/styles/main.css
+++ b/styles/main.css
@@ -211,7 +211,8 @@ body {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
+  width: 10rem;
+  overflow: hidden;
   padding: 0.5rem;
 }
 
